--- a/src/app/home/components/column/column.component.html
+++ b/src/app/home/components/column/column.component.html
@@ -1,3 +1,8 @@
 <div class="column">
   <app-column-header></app-column-header>
+  <div class="tasks">
+    <app-task-card></app-task-card>
+    <app-task-card></app-task-card>
+    <app-task-card></app-task-card>
+  </div>
 </div>
