--- a/src/app/home/components/kanban/kanban.component.html
+++ b/src/app/home/components/kanban/kanban.component.html
@@ -1,5 +1,9 @@
-<span class="title">Título</span>
-<span class="sub-title">Last edited by: Manoel Almeida</span>
-<app-column></app-column>
-<app-column></app-column>
-<app-column></app-column>
+<div class="kanban-container">
+  <span class="title">Título</span>
+  <span class="sub-title">Last edited by: Manoel Almeida</span>
+  <div class="column-container">
+    <app-column></app-column>
+    <app-column></app-column>
+    <app-column></app-column>
+  </div>
+</div>
