--- a/src/app/home/components/column-header/column-header.component.html
+++ b/src/app/home/components/column-header/column-header.component.html
@@ -2,10 +2,10 @@
   <div class="header">
     <app-column-title></app-column-title>
     <div class="options">
-      <img src="../../../../assets/icons/more_horiz-black-18dp.svg">
-      <img src="../../../../assets/icons/add-black-18dp.svg">
+      <app-icon-button img="../../../../assets/icons/more_horiz-black-18dp.svg" (action)="handleBtnMoreClick()"></app-icon-button>
+      <app-icon-button img="../../../../assets/icons/add-black-18dp.svg" (action)="handleBtnAddClick()"></app-icon-button>
     </div>
   </div>
-  
+  <hr class="divider">
 </div>
 
