--- a/src/app/home/components/kanban/kanban.component.css
+++ b/src/app/home/components/kanban/kanban.component.css
@@ -1,3 +1,7 @@
+.kanban-container {
+  padding: 24px;
+}
+
 .title {
   display: block;
   font-family: Ubuntu, sans-serif;
@@ -10,6 +14,15 @@
   color: #848484;
   font-family: Ubuntu, sans-serif;
   font-weight: bold;
-  font-size: 18px;
+  font-size: 16px;
   margin-top: 16px;
+}
+
+.column-container {
+  display: flex;
+  margin-top: 30px;
+}
+
+.column-container app-column:not(:first-child) {
+  margin-left: 54px;
 }
