--- a/src/styles.css
+++ b/src/styles.css
@@ -2,11 +2,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 
+* {
+  margin: 0;
+  padding: 0;
+  outline: 0;
+  box-sizing: border-box;
+}
+
 html, body { 
   height: 100%; 
 }
 
 body { 
-  margin: 0; 
+  margin: 0;
+  background: #FAF9F8;
+  font-size: 100%;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
