Pulling data from database

--- a/src/app/home/components/column-header/column-header.component.html
+++ b/src/app/home/components/column-header/column-header.component.html
@@ -1,6 +1,6 @@
 <div>
   <div class="header">
-    <app-column-title></app-column-title>
+    <app-column-title [title]="title"></app-column-title>
     <div class="options">
       <app-icon-button img="../../../../assets/icons/more_horiz-black-18dp.svg" (action)="handleBtnMoreClick()"></app-icon-button>
       <app-icon-button img="../../../../assets/icons/add-black-18dp.svg" (action)="handleBtnAddClick()"></app-icon-button>
