--- a/src/app/home/components/kanban/kanban.component.css
+++ b/src/app/home/components/kanban/kanban.component.css
@@ -23,6 +23,6 @@
   margin-top: 30px;
 }
 
-.column-container app-column:not(:first-child) {
+.column-container div:not(:first-child) {
   margin-left: 54px;
 }
