--- a/src/app/home/components/task-card/task-card.component.html
+++ b/src/app/home/components/task-card/task-card.component.html
@@ -1,4 +1,4 @@
 <div class="card">
-  <span class="title">Título da tarefa</span>
-  <span class="description">Uma descrição detalhada da tarefa que provavelmente possúi mais de uma linha.</span>
+  <span class="title">{{task.title}}</span>
+  <span class="description">{{task.description}}</span>
 </div>
